<resources>
    <string name="app_name">WFCRC</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="share">Share</string>
    <string name="wfcrc">World Federation for Coral Reef Conservation</string>
    <string name="learn">Learn more</string>
    <string name="donate">Donate</string>
    <string name="webURL"><a href="http://wfcrc.org">http://wfcrc.org</a></string>
    <string name="currency">$</string>
    <string name="no_results">No results</string>
    <string name="no_network">You don\'t have connectivity</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="About">About us</string>
    <string name="feedback">Feedback</string>
    <string name="programs_tab_title">Programs</string>
    <string name="programs_error">Sorry, something went wrong. Try again later.</string>
    <string name="maps_tab_title">Geo-Portal</string>
    <string name="first_response_tab_title">First Response</string>
    <string name="aboutDescription">
        The World Federation for Coral Reef Conservation (WFCRC) was developed in 2008 as a volunteer, community-based monitoring protocol designed to measure the health and safety of coral reefs on a global scale. WFCRC is developing the following goals:
        \n\n
        As we proceed to identify and standardize threats to coral reefs and share that information, we have seen how the items listed below are of great importance to reefs worldwide.
        \n\n
        - to foster an environment of collaboration among agencies around the world for standardization and the sharing of data gathered and for concerns that effect reefs worldwide, Citizen Scientists, local governments and local stakeholders.
        \n
        -to create awareness by education through an outreach program to reach current consumers of ocean resources and future consumers;
        \n
        - to create a global GIS dashboard and database with data from a network of volunteer citizen scientists that regularly monitor and report on reef health;
        \n
        - to involve local community action to create requirements for re-zoning parcels that could affect downhill geology and/or agricultural runoff that may negatively affect or even kill reefs in proximity by using ecologically sound and economically sustainable solutions.
        \n\n
        With this effort of designing a Service-Oriented Spatial Data Infrastructures, we highlight a strategy for utilizing spatial data more effectively, as it pertains to reef decline.
        \n\n
        We have developed a step procedure or workflow for identifying how sharing data between all groups is essential for making informed decisions about the health and well being of the world’s coral reefs. Not only sharing but the ability to find pertinent information in a single source and in a rational and easy avenue for non-professionals is essential for continued use.  To reach even a larger population we will also create and offer links, syndications and feeds to libraries throughout the world.
        \n\n
        We are a completely paperless effort.  Our business environmental effort is to have the smallest footprint and make the largest impact. All of our contact with team members will be via email. So our effort will be to create strategic  alliances’ with agencies like NOAA, World Resources Inc, Seas, Reef Relief, DAN, dive shops, universities research groups and anyone involved is providing diving excursions or aquatic research. With collaboration between these groups effective monitoring sites can be identified for study, data gathering and mitigating coral reef decline.
        \n\n
        Local island governments are a very large part of this effort. It’s takes an attitude of thinking globally and acting locally. For local business, “going green” is an important aspect of continued success. Projecting future development and meeting infrastructure demands are always difficult. As local governments regularly up date future land-use plans, typically there are no requirements to rezone parcels that could affect downhill geology and/or agricultural runoff  that may negatively affect or even kill reefs in proximity. Demands of the country’s infrastructure are increasing without data driven environmental restraints (See Sediment Flow &amp; Urban Runoff). As development occurs without understanding the ramification of this development of roads, sewer and water runoff, decline of marine resources will continue, as well as clean water availability. For local knowledge and connections to the island governments an ambassador will be identified and secured for this effort. As a result of this investigation a template or work flow will be realized and can be applied to other island governments in addition to exposing governments to GIS and how they could benefit from making development decisions driven by current data. The location for the roll out of the first WFCRC dive site will be The Island of St. Martin, followed by Saba, Anguilla and Guadeloupe. Then other islands will be evaluated for The Green Card development using the development template developed on the Island of St. Martin. We have developed many contacts with local business as well as local officials in St. Martin who are excited about the project as they realize the socioeconomic impact the reef management has on the future development of their island.
        \n\n
        Once again the end result we hope to achieve is to participate in and have an impact on, the mitigation of the decline of the world’s ocean coral reefs through legislation driven by scientific data collected by a worldwide network of diver participation. With results that can be realized in one’s life time.
        \n\n
        We want participation for all interested parties to be personal and long lasting. For sustainability we need to involve not only today’s divers but tomorrows as well. It is important to educate future ocean enthusiast the need to preserve the oceans resources as they are limited and currently in immediate peril.  We want to create an environment of revolving benefits for revolving participation from divers to local economies, and to the real benefit, the world’s reef complexes.
    </string>
    <string name="follow">Follow us</string>
    <string name="follow_twitter">https://twitter.com/CoralConserve</string>
    <string name="follow_facebook">https://www.facebook.com/TheWorldFederationForCoralReefConservation</string>
    <string name="follow_linkein">http://www.linkedin.com/company/world-federation-for-coral-reef-conservation</string>
    <string name="follow_googleplus">https://plus.google.com/u/1/b/100744766848434756804/100744766848434756804</string>
    <string name="follow_youtube">https://www.youtube.com/channel/UCspRoolLWHzkl4oO03yL7hA</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="donate_description">100% of your tax deductible donation will go towards program development, logistical training for our volunteers in the field, outreach and education. We thank you for your support.</string>
    <string name="donate_paypal">Donate with PayPal</string>
    <string name="donate_defaultAmount1">5</string>
    <string name="donate_defaultAmount2">10</string>
    <string name="donate_defaultAmount3">20</string>
    <string name="donate_otherAmount">Other mAmount:</string>
    <string name="donate_otherAmount_hint">$</string>
    <string name="donate_error_title">Oops!</string>
    <string name="donate_error_description">Something went wrong and we weren\'t able to complete your donation. Your payment has been cancelled and your account was not charged. Please, try again later.</string>
    <string name="donate_success_title">Thank you!</string>
    <string name="donate_success_description">Your donation to WFCRC helps save the coral reef.</string>
    <string name="donate_share_subject">Donate to WFCRC</string>
    <string name="donate_share_body">My donation to WFCRC helps save the coral reef.</string>
    <string name="donation_invoice">Donation to WFCRC</string>
    <string name="donation_website_url">http://www.wfcrc.org/donation-form/</string>
    <string name="feedback_title">Send feedback</string>
    <string name="name">Name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="age">Age</string>
    <string name="type_coral">Type of coral</string>
    <string name="type_coral_prompt">Choose one or more options</string>
    <string name="attach">Attach photos</string>
    <string name="comments">Comments</string>
    <string name="percent_coral">Percent live coral</string>
    <string name="estimated_area">Estimated area affected (sq ft)</string>
    <string name="location">Location</string>
    <string name="depth">Maximum depth (feet)</string>
    <string-array name="type_coral_array">
        <item>Smooth Mounding</item>
        <item>Smooth Finger</item>
        <item>Smooth Plate &amp; Pillar</item>
        <item>Rice Coral</item>
        <item>Small/Branching</item>
        <item>Corrugated</item>
    </string-array>
    <string name="feedback_email_subject">Feedback for WFCRC</string>
    <string name="document_gallery_title">Document Gallery</string>
    <string name="no_filter">No filters</string>
    <string name="category">Category</string>
    <string name="document_gallery_error">Sorry, something went wrong when accessing the document gallery. Try again later.</string>
    <string name="document_gallery_search">Search Document Gallery</string>
    <string name="volunteer_title">Volunteer with us</string>
    <string name="motivation">Why do you want to volunteer with us?</string>
    <string name="skills">Skills</string>
    <string-array name="skills_array">
        <item>Marketing</item>
        <item>IT</item>
        <item>Events</item>
        <item>Fundraising</item>
        <item>Legal</item>
        <item>Other</item>
    </string-array>
    <string name="diver">Dive level experience</string>
    <string name="hours_diving">How many down hours?</string>
    <string-array name="dive_experience_array">
        <item>None</item>
        <item>Beginner</item>
        <item>Accomplished</item>
        <item>Advanced</item>
        <item>Dive master</item>
    </string-array>
    <string name="volunteer_type">How do you want to colaborate?</string>
    <string name="volunteer">Volunteer</string>
    <string name="ambassador">Ambassador</string>
    <string name="attach_cv">Attach CV</string>
    <string name="volunteer_email_chooser">Send volunteer form by email</string>
    <string name="volunteer_address">vic.ferguson@wfcrc.org</string>
    <string name="not_filled">This field is mandatory</string>
    <string name="subject">This field is mandatory</string>
    <string name="volunteer_email_subject">I want to be a volunteer</string>
    <string name="volunteer_end">Thank\'s for your submission. We\'ll keep in touch.</string>
    <string name="ga_programs_fragment">Programs Tab</string>
    <string name="ga_programs_fragment_more">Open Program Detail</string>
    <string name="ga_programs_fragment_share">Share Program</string>
    <string name="ga_programs_detail">Program Detail</string>
    <string name="ga_programs_detail_share">Share Program Detail</string>
    <string name="ga_document_gallery">Document Gallery</string>
    <string name="ga_about">About Us</string>
    <string name="ga_about_web">Open website</string>
    <string name="ga_about_follow">Follow social network</string>
    <string name="ga_about_FB">Facebook</string>
    <string name="ga_about_TW">Twitter</string>
    <string name="ga_about_LI">LinkedIn</string>
</resources>