<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.wfcrc.VolunteerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <android.support.v7.widget.Toolbar
            android:id="@+id/volunteerToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/WFCRCTheme"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:titleTextColor="@android:color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_weight="0">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_person_black_24dp"
                        android:tint="@color/primary_dark_material_light"
                        android:layout_gravity="center_vertical|center_horizontal"/>

                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:dividerPadding="8dp"
                    android:layout_weight="1">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingTop="16dp"
                        android:paddingBottom="16dp"
                        android:id="@+id/editTextName"
                        android:hint="@string/name"
                        android:textSize="16sp"
                        />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:dividerPadding="8dp"
                android:layout_marginLeft="48dp">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:id="@+id/editTextLastName"
                    android:hint="@string/last_name"
                    android:textSize="16sp"/>

            </android.support.design.widget.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_weight="0">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_phone_black_24dp"
                        android:tint="@color/primary_dark_material_light"
                        android:layout_gravity="center_vertical|center_horizontal"/>

                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:dividerPadding="8dp">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:paddingTop="16dp"
                        android:paddingBottom="16dp"
                        android:id="@+id/editTextPhone"
                        android:hint="@string/phone"
                        android:textSize="16sp"
                        android:inputType="textEmailAddress|phone" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <!--<LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_weight="0">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_email_black_24dp"
                        android:layout_gravity="center_vertical|center_horizontal"/>

                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:dividerPadding="8dp">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:paddingTop="16dp"
                        android:paddingBottom="16dp"
                        android:id="@+id/editTextEmail"
                        android:hint="@string/email"
                        android:textSize="16sp"
                        android:inputType="phone" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>-->

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_weight="0">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_build_black_24dp"
                        android:tint="@color/primary_dark_material_light"
                        android:layout_gravity="center_vertical|center_horizontal"/>

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:text="@string/volunteer_type"
                    android:textSize="16sp"/>

            </LinearLayout>

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="48dp">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:text="@string/volunteer"
                    android:id="@+id/radioButtonVolunteer"
                    android:textSize="16sp"
                    android:checked="true"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:text="@string/ambassador"
                    android:id="@+id/radioButtonAmbassador"
                    android:textSize="16sp"/>

            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/skills"
                android:id="@+id/textView4"
                android:textSize="16sp"
                android:layout_marginLeft="48dp"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:id="@+id/spinnerVolunteerSkill"
                android:layout_marginLeft="48dp"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/diver"
                android:id="@+id/diverCheckBox"
                android:textSize="16sp"
                android:layout_marginLeft="48dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_weight="0">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_attach_file_black_24dp"
                        android:tint="@color/primary_dark_material_light"
                        android:layout_gravity="center_vertical|center_horizontal"/>

                </LinearLayout>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/attachCVButton"
                    android:text="@string/attach_cv"
                    android:visibility="visible"/>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone"
                    android:id="@+id/cvLayout"
                    android:background="@color/material_gray_300">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="ATTACHED CV"
                        android:id="@+id/cvTextView" />

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_clear_black_24dp"
                        android:tint="@color/primary_dark_material_light"
                        android:background="@null"
                        android:id="@+id/removeAttachedCVButton"
                        android:layout_alignParentRight="true"/>

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_weight="0">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_comment_black_24dp"
                        android:tint="@color/primary_dark_material_light"
                        android:layout_gravity="center_vertical|center_horizontal"/>

                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:dividerPadding="8dp">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:paddingTop="16dp"
                        android:paddingBottom="16dp"
                        android:id="@+id/editTextComments"
                        android:hint="@string/motivation"
                        android:textSize="16sp"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>
</ScrollView>